# two-animals

./: .gitignore  .mcp.json  CLAUDE.md  README.md  flake.nix  justfile
data/contracts/: conv_20250802_031123_848.json  conv_20250802_135249_342.json  conv_20250802_143508_702.json  conv_20250802_143754_239.json  conv_20250802_155917_362.json  conv_20250802_160518_790.json  conv_20250802_161027_531.json  conv_20250802_161622_431.json  conv_20250802_162021_033.json  conv_20250802_163200_123.json  conv_20250802_164157_042.json
data/npcs/bear/: initial_memories.json  memories.json  personality.md
data/npcs/wolf/: initial_memories.json  memories.json  personality.md
data/prompts/core/: npc_base.md
data/prompts/gm/: gm_base.md
docs/: ideas.md  interaction-system.md  mvp-implementation-order.md  technical-architecture.md
docs/requirements/: memory-system.md  refactoring-plan.md
godot/: demo.tscn  http_request.gd  http_request.gd.uid  icon.svg.import  project.godot
server/: Cargo.toml
server/src/: lib.rs  logging.rs  main.rs  types.rs
server/src/game/: contracts.rs  mod.rs  state.rs  turn.rs
server/src/gm/: mod.rs  resolution.rs
server/src/llm/: client.rs  mod.rs  ollama.rs  parser.rs
server/src/npcs/: intent.rs  memory.rs  memory_update.rs  mod.rs  registry.rs
server/src/prompts/: builder.rs  loader.rs  mod.rs
server/src/utils/: mod.rs  text.rs
server/tests/: api_tests.rs  llm_integration_tests.rs  ollama_integration_tests.rs
