[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
axum-test = "17.0"
